Add GetForkChoice API